--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ad dolores nulla? Ipsa nisi consectetur doloribus rem asperiores, consequatur sequi!</p>
+            <p>Hai, perkenalkan nama saya Achmad Rifai Satria Wijaya. Atau bisa dipanggil Rifai. Saya berprofesi sebagai pedagang dan freelance web designer.</p>
           </div>
           <div class="col-md-4">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit quas sapiente aperiam ex officiis cum. Omnis perspiciatis quia vero nihil delectus officiis ab dolores laborum?</p>
